Get rid of unneeded files

--- a/index.html
+++ b/index.html
@@ -1,28 +1,16 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title></title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
-
-		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/jquery-ui.min.css">
-		<link rel="stylesheet" href="css/jquery-ui.structure.min.css">
-		<link rel="stylesheet" href="css/jquery-ui.theme.min.css">
 		<link rel="stylesheet" href="css/jstron.css">
-		<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 	</head>
 	<body>
 		<canvas class="tron" width="1800" height="700"></canvas>
-		<div>Alive: <span class="alive"></span> | Use complementary colors <input id="colors" type="checkbox" checked></div>
+		<div>Alive: <span class="alive"></span> | <label for="colors">Use complementary colors</label> <input id="colors" type="checkbox" checked></div>
 		<div>Count: <span class="count"></span></div>
 		<div id="slider-count"></div>
 		<div>Speed: <span class="speed"></span></div>
@@ -30,9 +18,7 @@
 
 		<div><button class="reset">Reset</button></div>
 		
-		<script src="js/vendor/jquery-1.9.1.min.js"></script>
-		<script src="js/jquery-ui.min.js"></script>
-		<script src="js/plugins.js"></script>
+		<script src="js/jquery-1.9.1.min.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
